- Removed extra padding on data view field criteria that caused checkboxes and radios not to be correctly vertically aligned.

--- a/RockWeb/Styles/_blocks-reporting.less
+++ b/RockWeb/Styles/_blocks-reporting.less
@@ -73,10 +73,6 @@ span.data-view-filter-label {
   margin: 0 12px 0 0;
 }
 
-.data-view-detail .field-criteria > .col-md-10 > div {
-  padding-top: (@padding-base-vertical + 1);
-}
-
 // 2. Dynamic Report
 // -------------------------
 
